TAG: qcreports_db-5-0-0-2
DATE: 04/09/2012
STAFF: lec
CHANGES: 
1) TR 11029/mgd/GO_Combined_Report.py

TAG: qcreports_db-5-0-0-1
DATE: 04/05/2012
STAFF: lec
CHANGES: 
1) TR11028/mgd/PRB_StrainByDate.sql

TAG: qcreports_db-4-4-2-15
DATE: 03/27/2012
STAFF: lec
CHANGES: 
1) mgd/BIB_RefsToIndex.py; fix pubmedID

TAG: qcreports_db-4-4-2-14
DATE: 03/08/2012
STAFF: lec
CHANGES: 
1) TR10909/monthly/GXD_ImagePanes.py;added as QC from customSQL

TAG: qcreports_db-4-4-2-13
TAG: qcreports_db-4-4-2-12
DATE: 02/16/2012
STAFF: sc
CHANGES: TR9766
1) Added: MGI_GenotypeDescriptions.py and added to qcr.html for Mary Dolan

TAG: qcreports_db-4-4-2-11
DATE: 01/23/2012
STAFF: lec
CHANGES: 
1) TR10945/mgd/GXD_Images.py/added 'EMBO J' journal

TAG: qcreports_db-4-4-2-10
DATE: 01/11/2012
STAFF: sc
CHANGES: TR10952
1) MRK_GeneNoMcvAnnot.py - added interim markers

TAG: qcreports_db-4-4-2-9
DATE: 01/04/2012
STAFF: dbm
CHANGES:
1) Added "-f" option to csh startup in wrapper scripts

TAG: qcreports_db-4-4-2-8
DATE: 01/03/2012
STAFF: lec
CHANGES:
1) VOC_InvalidInferred.py

TAG: qcreports_db-4-4-2-7
TAG: qcreports_db-4-4-2-6
DATE: 12/28/2011
STAFF: lec
CHANGES:
1)TR10930/mgd/GXD_Images.py
2)TR10934/replace any commas in WITH field with pipe
3) converted "*=" to LEFT OUTER JOIN
mgd/GO_Combined_Report.py
mgd/MRK_NoVEGA.py
mgd/MRK_NoENSEMBL.py
mgd/MGI_GenesAndPseudogenesWithSequence.py
mgd/GXD_FullCodeable.py
monthly/ALL_Jax_Report.py
mgd/PRB_StrainF1F2.sql
mgd/PRB_StrainDup.sql
mgd/PRB_StrainByDate.sql
mgd/MLP_Nomenclature.sql

2) TR10930/Oxford journals
GXD_Images.py

TAG: qcreports_db-4-4-2-5
DATE: 11/22/2011
STAFF: lec
CHANGES:
1) added -f to *.csh, Configuration.default

TAG: qcreports_db-4-4-2-4
DATE: 11/14/2011
STAFF: lec
CHANGES:
1) TR10901/GXD_Stats.py/J:177549 EuReGene

TAG: qcreports_db-4-4-2-3
DATE: 10/27/2011
STAFF: lec
CHANGES:
1) MRK_McvAnnotByFeature.py: convert to ansi standard inner/out join

TAG: qcreports_db-4-4-2-2
DATE: 10/12/2011
STAFF: lec
CHANGES: